--- a/project/templates/flatpages/news.html
+++ b/project/templates/flatpages/news.html
@@ -1,85 +1,15 @@
-<!doctype html>
+{% extends 'flatpages/default.html' %}
+<!DOCTYPE html>
 <html lang="en">
 <head>
-	<meta charset="utf-8" />
-	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
-
-	<title>{{flatpage.title}}</title>
-
-	<meta content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0' name='viewport' />
-    <meta name="viewport" content="width=device-width" />
-
+    <meta charset="UTF-8">
+    <title>{{flatpage.title}}</title>
     {% load static %}
-    <!-- Core theme CSS (includes Bootstrap)-->
-    <link href="{% static 'css/bootstrap.min.css' %}" rel="stylesheet" />
-
-    <!-- Animation library for notifications   -->
-    <link href="assets/css/animate.min.css" rel="stylesheet"/>
-
-    <!--  Light Bootstrap Table core CSS    -->
-    <link href="assets/css/light-bootstrap-dashboard.css" rel="stylesheet"/>
-
-
-    <!--  CSS for Demo Purpose, don't include it in your project     -->
-    <link href="assets/css/demo.css" rel="stylesheet" />
-
-
-    <!--     Fonts and icons     -->
-    <link href="http://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
-    <link href='http://fonts.googleapis.com/css?family=Roboto:400,700,300' rel='stylesheet' type='text/css'>
-    <link href="assets/css/pe-icon-7-stroke.css" rel="stylesheet" />
 </head>
 <body>
-
-<div class="wrapper" >
-
-
-    <div class="main-panel" >
-        <nav class="navbar navbar-default navbar-fixed">
-            <div class="container-fluid" >
-                <div class="navbar-header">
-
-                    <a class="navbar-brand" href="#">{{flatpage.title}}</a>
-                </div>
-                <div class="collapse navbar-collapse">
-
-
-                    <ul class="nav navbar-nav navbar-right">
-                        <li>
-                           <a href="">
-                               О сайте
-                            </a>
-                        </li>
-                        <li class="dropdown">
-                              <a href="#" class="dropdown-toggle" data-toggle="dropdown">
-                                    Меню сайта
-                                    <b class="caret"></b>
-                              </a>
-                              <ul class="dropdown-menu">
-                                <li><a href="#">Действие 1</a></li>
-                                <li><a href="#">Действие 1</a></li>
-                                <li><a href="#">Действие 1</a></li>
-                                <li><a href="#">Действие 1</a></li>
-                                <li><a href="#">Действие 1</a></li>
-                                <li class="divider"></li>
-                                <li><a href="#">Separated link</a></li>
-                              </ul>
-                        </li>
-                        <li>
-                            <a href="#">
-                                Выход
-                            </a>
-                        </li>
-                    </ul>
-                </div>
-            </div>
-        </nav>
-
-
-        <div class="content">
-            <div class="container-fluid">
-                <div class="row">
-                    <div class="col-md-12">
+<h3>{{flatpage.title}}</h3>
+Новости на нашем сайте
+<div class="col-md-12">
                         <div class="card card-plain">
                             <div class="header">
                                 <h4 class="title">Table on Plain Background</h4>
@@ -143,25 +73,5 @@
                             </div>
                         </div>
                     </div>
-
-
-                </div>
-            </div>
-        </div>
-
-
-
-    </div>
-</div>
-        <footer class="footer">
-            <div class="container-fluid">
-                <nav class="pull-left">
-                    </nav>
-
-                </div>
-        </footer>
 </body>
-
-
-
 </html>
