Создан urls.py в приложении news_app, добавлены представления во views.py, добавлен список новостей, добавлена таблица вывода списка и заголовков

--- a/project/templates/flatpages/news.html
+++ b/project/templates/flatpages/news.html
@@ -1,77 +1,26 @@
 {% extends 'flatpages/default.html' %}
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>{{flatpage.title}}</title>
-    {% load static %}
-</head>
-<body>
-<h3>{{flatpage.title}}</h3>
-Новости на нашем сайте
-<div class="col-md-12">
-                        <div class="card card-plain">
-                            <div class="header">
-                                <h4 class="title">Table on Plain Background</h4>
-                                <p class="category">Here is a subtitle for this table</p>
-                            </div>
-                            <div class="content table-responsive table-full-width">
-                                <table class="table table-hover">
-                                    <thead>
-                                        <th>ID</th>
-                                    	<th>Name</th>
-                                    	<th>Salary</th>
-                                    	<th>Country</th>
-                                    	<th>City</th>
-                                    </thead>
-                                    <tbody>
-                                        <tr>
-                                        	<td>1</td>
-                                        	<td>Dakota Rice</td>
-                                        	<td>$36,738</td>
-                                        	<td>Niger</td>
-                                        	<td>Oud-Turnhout</td>
-                                        </tr>
-                                        <tr>
-                                        	<td>2</td>
-                                        	<td>Minerva Hooper</td>
-                                        	<td>$23,789</td>
-                                        	<td>Curaçao</td>
-                                        	<td>Sinaai-Waas</td>
-                                        </tr>
-                                        <tr>
-                                        	<td>3</td>
-                                        	<td>Sage Rodriguez</td>
-                                        	<td>$56,142</td>
-                                        	<td>Netherlands</td>
-                                        	<td>Baileux</td>
-                                        </tr>
-                                        <tr>
-                                        	<td>4</td>
-                                        	<td>Philip Chaney</td>
-                                        	<td>$38,735</td>
-                                        	<td>Korea, South</td>
-                                        	<td>Overland Park</td>
-                                        </tr>
-                                        <tr>
-                                        	<td>5</td>
-                                        	<td>Doris Greene</td>
-                                        	<td>$63,542</td>
-                                        	<td>Malawi</td>
-                                        	<td>Feldkirchen in Kärnten</td>
-                                        </tr>
-                                        <tr>
-                                        	<td>6</td>
-                                        	<td>Mason Porter</td>
-                                        	<td>$78,615</td>
-                                        	<td>Chile</td>
-                                        	<td>Gloucester</td>
-                                        </tr>
-                                    </tbody>
-                                </table>
 
-                            </div>
-                        </div>
-                    </div>
-</body>
-</html>
+{% block title %}
+Новости
+{% endblock %}
+{% block content %}
+<div class="header">
+<h1>Главная страница</h1>
+</div>
+<p>Новости</p>
+<div class="content table-responsive table-full-width">
+ <table class="table table-hover">
+                                    <thead>
+                                        <th>Название</th>
+                                    	<th>Дата</th>
+                                    	<th>Кратко</th>
+                                    </thead>
+     <tbody>
+     {% for el in values %}
+     <tr><th>{{ el }}</th></tr>
+     {% endfor %}
+     </tbody>
+ </table>
+</div>
+
+{% endblock %}
