--- a/project/templates/flatpages/default.html
+++ b/project/templates/flatpages/default.html
@@ -4,7 +4,7 @@
 	<meta charset="utf-8" />
 	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
 
-	<title>{{flatpage.title}}</title>
+	<title>{% block title %}{% endblock %}</title>
 
 	<meta content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0' name='viewport' />
     <meta name="viewport" content="width=device-width" />
@@ -13,155 +13,34 @@
     <!-- Core theme CSS (includes Bootstrap)-->
     <link href="{% static 'css/bootstrap.min.css' %}" rel="stylesheet" />
 
-    <!-- Animation library for notifications   -->
-    <link href="assets/css/animate.min.css" rel="stylesheet"/>
-
-    <!--  Light Bootstrap Table core CSS    -->
-    <link href="assets/css/light-bootstrap-dashboard.css" rel="stylesheet"/>
-
-
-    <!--  CSS for Demo Purpose, don't include it in your project     -->
-    <link href="assets/css/demo.css" rel="stylesheet" />
-
-
-    <!--     Fonts and icons     -->
-    <link href="http://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
-    <link href='http://fonts.googleapis.com/css?family=Roboto:400,700,300' rel='stylesheet' type='text/css'>
-    <link href="assets/css/pe-icon-7-stroke.css" rel="stylesheet" />
 </head>
 <body>
-
-<div class="wrapper" >
-
-
     <div class="main-panel" >
         <nav class="navbar navbar-default navbar-fixed">
             <div class="container-fluid" >
                 <div class="navbar-header">
-
-                    <a class="navbar-brand" href="#">{{flatpage.title}}</a>
+                    <a class="navbar-brand" href="{% url 'news' %}">Новости</a>
                 </div>
-                <div class="collapse navbar-collapse">
-
-
-                    <ul class="nav navbar-nav navbar-right">
-                        <li>
-                           <a href="">
+                <ul class="nav navbar-nav navbar-right">
+                    <li>
+                        <a href="{% url 'about' %}">
                                О сайте
-                            </a>
-                        </li>
-                        <li class="dropdown">
-                              <a href="#" class="dropdown-toggle" data-toggle="dropdown">
-                                    Меню сайта
-                                    <b class="caret"></b>
-                              </a>
-                              <ul class="dropdown-menu">
-                                <li><a href="#">Действие 1</a></li>
-                                <li><a href="#">Действие 1</a></li>
-                                <li><a href="#">Действие 1</a></li>
-                                <li><a href="#">Действие 1</a></li>
-                                <li><a href="#">Действие 1</a></li>
-                                <li class="divider"></li>
-                                <li><a href="#">Separated link</a></li>
-                              </ul>
-                        </li>
-                        <li>
-                            <a href="#">
-                                Выход
-                            </a>
-                        </li>
-                    </ul>
-                </div>
+                        </a>
+                    </li>
             </div>
         </nav>
-
-
-        <div class="content">
-            <div class="container-fluid">
+    </div>
+<div class="content">
+    <div class="container-fluid">
                 <div class="row">
                     <div class="col-md-12">
                         <div class="card card-plain">
-                            <div class="header">
-                                <h4 class="title">Table on Plain Background</h4>
-                                <p class="category">Here is a subtitle for this table</p>
-                            </div>
-                            <div class="content table-responsive table-full-width">
-                                <table class="table table-hover">
-                                    <thead>
-                                        <th>ID</th>
-                                    	<th>Name</th>
-                                    	<th>Salary</th>
-                                    	<th>Country</th>
-                                    	<th>City</th>
-                                    </thead>
-                                    <tbody>
-                                        <tr>
-                                        	<td>1</td>
-                                        	<td>Dakota Rice</td>
-                                        	<td>$36,738</td>
-                                        	<td>Niger</td>
-                                        	<td>Oud-Turnhout</td>
-                                        </tr>
-                                        <tr>
-                                        	<td>2</td>
-                                        	<td>Minerva Hooper</td>
-                                        	<td>$23,789</td>
-                                        	<td>Curaçao</td>
-                                        	<td>Sinaai-Waas</td>
-                                        </tr>
-                                        <tr>
-                                        	<td>3</td>
-                                        	<td>Sage Rodriguez</td>
-                                        	<td>$56,142</td>
-                                        	<td>Netherlands</td>
-                                        	<td>Baileux</td>
-                                        </tr>
-                                        <tr>
-                                        	<td>4</td>
-                                        	<td>Philip Chaney</td>
-                                        	<td>$38,735</td>
-                                        	<td>Korea, South</td>
-                                        	<td>Overland Park</td>
-                                        </tr>
-                                        <tr>
-                                        	<td>5</td>
-                                        	<td>Doris Greene</td>
-                                        	<td>$63,542</td>
-                                        	<td>Malawi</td>
-                                        	<td>Feldkirchen in Kärnten</td>
-                                        </tr>
-                                        <tr>
-                                        	<td>6</td>
-                                        	<td>Mason Porter</td>
-                                        	<td>$78,615</td>
-                                        	<td>Chile</td>
-                                        	<td>Gloucester</td>
-                                        </tr>
-                                    </tbody>
-                                </table>
-
+{% block content %}
+{% endblock %}
                             </div>
                         </div>
                     </div>
-
-
-                </div>
-            </div>
         </div>
-
-
-
     </div>
-</div>
-        <footer class="footer">
-            <div class="container-fluid">
-                <nav class="pull-left">
-                    </nav>
-
-                </div>
-        </footer>
 </body>
-
-
-
 </html>
