Создан класс в views.py для динамических страниц, добавлен путь в url.py для перехода на динамические страницы, создан шаблон details_view.html для любой динамической страницы, добавлены ссылки на отдельную страницу статьи в заголовок новости, добавлена панель добавления новости через admin.py и класс meta в models.py

--- a/project/templates/flatpages/default.html
+++ b/project/templates/flatpages/default.html
@@ -36,11 +36,15 @@
                     <div class="col-md-12">
                         <div class="card card-plain">
 {% block content %}
+                            {{news}}
 {% endblock %}
                             </div>
                         </div>
                     </div>
         </div>
     </div>
+
+
+
 </body>
 </html>
