Добавлен фильтр censor файлом custom_filters.py с проверкой на строку и заменой слов с заглавной первой буквы, фильтр применен к динамической странице, к тексту и заголовкам. Исправлена страница about, представления и url файл

--- a/project/templates/flatpages/about.html
+++ b/project/templates/flatpages/about.html
@@ -4,6 +4,6 @@
 О сайте
 {% endblock %}
 {% block content %}
-<h1>О сайте</h1>
-<p>Контакты</p>
+<h3>О сайте</h3>
+<p> Вы находитесь на сайте актуальных новостей. Чтобы узнать последние новости, перейдите по ссылке "Новости" в верхней панели</p>
 {% endblock %}
