--- a/project/templates/flatpages/details_view.html
+++ b/project/templates/flatpages/details_view.html
@@ -1,4 +1,5 @@
 {% extends 'flatpages/default.html' %}
+{% load custom_filters %}
 {% block title %}
 {{ article.title|slice:15 }}
 {% endblock %}
@@ -6,8 +7,8 @@
 <div class="header">
 </div>
 <div>
-    <h4>{{ article.title }}</h4>
-    <p>{{ article.text }}</p>
-    <p>{{ article.date }}</p>
+    <h4>{{ article.title|censor }}</h4>
+    <p>{{ article.text|censor }}</p>
+    <p>{{ article.date|date:"d m Y" }}</p>
 </div>
 {% endblock %}
